app/assets/stylesheets/partials/modules/_storefront.scss
/* ======================================================================================
   @MODULES -> STOREFRONT
   ====================================================================================== */

/*
	Detail view of a store.
*/

.storefront {
  @include font-size($font-size-sml, 1.5);

  /* Flexslider */
  .flexslider {
    color: #fff;

    /* When there is no store banner */
    &.is-no-store-banner {@include linear-gradient($color-grey-dark-3, $color-txt-dark);}

      .slides > li {
        @include to-rem(max-height, 297);
        overflow: hidden;

        /* Non JS users */
        .no-js & {max-height: none;}
      }

      /* Need fixed heights for each slide when there is no store banner */
      &.is-no-store-banner .slides > li {
        @include to-rem(height, 140);


        @include respond-min($iphone-landscape) {
          @include to-rem(height, 180);
        }

        @include respond-min($non-palm) {
          @include to-rem(height, 288);
        }

        @include respond-min($ipad-landscape) {
          @include to-rem(height, 210);
        }

        @include respond-min(1400) {
          @include to-rem(height, 228);
        }
      }
  }
}

      /* Store name when there is no store banner */
      .storefront__flexslider-storename {

        h1 {
          @include to-rem(padding-left padding-right, $spacing-base);
          @include to-rem(margin-top, -6);
          @include font-size(21, 1.3);
          text-transform: uppercase;

          /* Super long store name */
          &.is-long-store-name {@include font-size($font-size-lrger, 1.3);}

          @include respond-min($iphone-landscape) {
            @include font-size(26, 1.3);

            /* Super long store name */
            &.is-long-store-name {@include font-size(23, 1.3);}
          }

          @include respond-min($non-palm) {
            @include font-size(40, 1.3);
            @include to-rem(margin-top, 0);

            /* Super long store name */
            &.is-long-store-name {@include font-size(36, 1.3);}
          }

          @include respond-min($ipad-landscape) {
            /* Super long store name */
            &.is-long-store-name {@include font-size(28, 1.3);}
          }

          @include respond-range($ipad-landscape, $desk) {
            @include font-size(32, 1.3);
          }
        }
      }

      /* Blurb */
      .storefront__flexslider-blurb {

        > div {
          position: absolute;
          top: 0;
          bottom: 0;
          left: 0;
          right: 0;
          background-color: rgba(#000, 0.85);

          /* When there is no store banner */
          .is-no-store-banner & {background: transparent;}

          p {
            width: $page-container-width;
            margin-left: auto;
            margin-right: auto;
            @include to-rem(margin-top, -$spacing-half);
            @include font-size($font-size-milli, 1.5);

            @include respond-min($iphone-landscape) {
              margin-top: 0;
              @include font-size($font-size-sml, 1.5);
            }

            @include respond-min($non-palm) {
              width: 66%;
              @include font-size($font-size, 1.5);
            }

            @include respond-min($ipad-landscape) {
              width: 80%;
            }

            @include respond-range($ipad-landscape, 1100) {
              @include font-size($font-size-sml, 1.5);
            }
          }
        }
      }

  /* Store details */
  .storefront__details {
    border-style: solid;
    border-color: $color-grey-med-3;
    border-width: 1px 0;

    /* When they're 'Featured items', 'Store hours' are visible and non JS users */
    .no-js & {border-bottom: 0;}

    /* Allow store link to be positioned over to the far right at this breakpoint */
    @include respond-min($ipad-portrait) {
      position: relative;
    }
  }

    /* Store meta */
    .storefront__details__meta {
      @extend %clear-fix;
      @include to-rem(padding-top, $spacing-half+$spacing-quarter);
      /* Need to offset the bottom margin on the child `dd`s */
      @include to-rem(padding-bottom, ($spacing-half+$spacing-quarter) -$spacing-micro);
      @include to-rem(margin-right, 100);
      margin-bottom: 0;

      @include respond-min($non-palm) {
        @include to-rem(margin-right, 130);
      }

      @include respond-min($ipad-landscape) {
        margin-right: 0;
        @include to-rem(padding-top, $spacing-half);
        /* Need to offset the bottom margin on the child `dd`s */
        @include to-rem(padding-bottom, $spacing-half - $spacing-micro);
      }

      /* Store meta items */
      dd {
        @include to-rem(margin-bottom, $spacing-micro);
        @include to-rem(padding-left, $spacing-base + $spacing-micro);
        position: relative;

        .icon:before {
          position: absolute;
          left: 0;
          top: 0;
        }
      }

      /* Restore rules for `.hide-visually` elements */
      .storefront__details & .hide-visually {
        position: absolute;
        margin: -1px;
        padding: 0;
      }

      /* No indent */
      .storefront__details__meta__no-indent {padding-left: 0;}
    }

    /* Store phone no and location - hide at this breakpoint */
    @include respond-min($ipad-landscape) {
      .storefront__details__phone-map {display: none;}
    }

    /* Mods to location link at this breakpoint */
    @include respond-min($non-palm) {
      .storefront__details__phone-map .storefront-storelist-phone-map-links__cell--location {
        @include to-rem(width, 126);

        /* Add right border and decrease width at this breakpoint */
        @include respond-min($ipad-portrait) {
          @include to-rem(width, 120);
        }

        /* Vertically align */
        .storefront-storelist-phone-map-links__cell__valign {
          width: 100%;
          text-align: center;
          left: 0;
          @include translateY(-50%);
        }

          .icon:before {@include font-size(40, 1);}

          /* Link text */
          .hide-visually--palm {
            @include prefix(transition, all 0.2s);
            color: $color-txt-light;
            display: block;
          }

          &:hover .hide-visually--palm,
          &:focus .hide-visually--palm {color: $color-grey-dark-3;}
      }
    }

  /* Featured items */
  .storefront__featured {border-top: 1px solid $color-grey-med-3;}

    /* Shopping hours */
    .storefront__featured--hours {
      /* Need to shorten the day at this breakpoint range due to lack of real estate */
      /* Note: have to use `!important` keyword here to override the 'Hide' helper class */
      @include respond-range($ipad-landscape, $desk-lrg) {
        .table-striped .hide-fully--palm-inline {display: none !important;}
      }

      /* Adjust the width of the 1st column at this breakpoint */
      @include respond-min($desk-lrg) {
        col:first-child {width: $one-eighth;}
      }
    }

    /* Tiles */
    .storefront__featured--tiles {
      /* Hide 3rd tile by default */
      .grid__item:nth-child(3) {
        display: none;

        /* Show 3rd tile at this breakpoint */
        @include respond-min($non-palm) {
          display: block;
        }
      }

      /* Reinstate bottom margin for last child grid item */
      .grid__item:last-child {@include to-rem(margin-bottom, $grid-gutter-half);}

      /* Mods for 'Deal' tile at this breakpoint range */
      @include respond-range($ipad-landscape, 1300) {
        .tile--deals .tile__meta {
          @include to-rem(padding, 55 15);

          .tile__meta__desc {@include font-size($font-size-sml, 1.5);}
        }
      }
    }

